[gd_scene load_steps=2 format=3 uid="uid://dyh8k3n2w5mpa"]

[ext_resource type="Script" path="res://ui/screens/settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="AudioSettings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioLabel" type="Label" parent="VBoxContainer/AudioSettings"]
layout_mode = 2
text = "Audio"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/AudioSettings"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 70.0

[node name="DisplaySettings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DisplayLabel" type="Label" parent="VBoxContainer/DisplaySettings"]
layout_mode = 2
text = "Display"

[node name="FullscreenCheck" type="CheckButton" parent="VBoxContainer/DisplaySettings"]
layout_mode = 2
text = "Fullscreen"

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Back"
